<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name:</string>
    <string name="mobile_number">Mobile No.:</string>
    <string name="group_size">Group Size:</string>
    <string name="date_to_book">Date to Book:</string>
    <string name="time_to_book">Time to Book:</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="reset_form">Reset Form</string>
    <string name="smoking_zone">Smoking Zone: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
